--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <sessionState mode="InProc" timeout="30" />
   </system.web>
   <system.webServer>
     <modules>
