--- a/EBook.csproj
+++ b/EBook.csproj
@@ -186,8 +186,21 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AnswersController.cs" />
     <Compile Include="Controllers\AuthController.cs" />
+    <Compile Include="Controllers\Books1Controller.cs" />
+    <Compile Include="Controllers\CollectsController.cs" />
+    <Compile Include="Controllers\CouponsController.cs" />
+    <Compile Include="Controllers\CustomerAddressesController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\Customers1Controller.cs" />
+    <Compile Include="Controllers\MerchandisesController.cs" />
+    <Compile Include="Controllers\OwnsController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
+    <Compile Include="Controllers\SellersController.cs" />
+    <Compile Include="Controllers\ShoppingCartsController.cs" />
+    <Compile Include="Controllers\TransactsController.cs" />
+    <Compile Include="Controllers\VipMembersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -208,6 +221,7 @@
     <Compile Include="Models\Transact.cs" />
     <Compile Include="Models\VipMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BookSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -242,7 +256,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data" />
-    <Folder Include="Service" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
