--- a/packages.config
+++ b/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.5" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
@@ -28,6 +29,7 @@
   <package id="Remote.Linq.EntityFramework" version="5.8.2" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
   <package id="System.Data.OracleClient" version="1.0.8" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net472" />
