--- a/Web.config
+++ b/Web.config
@@ -19,7 +19,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <pages enableSessionState="true" />
-    <sessionState mode="InProc" timeout="30" />
+    <sessionState mode="InProc" cookieless="false" timeout="20" />
   </system.web>
   <system.webServer>
     <modules>
