--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="Mafly.Mail" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -22,7 +23,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess" version="19.3.0" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.3.0" targetFramework="net472" />
   <package id="Remote.Linq" version="5.8.2" targetFramework="net472" />
