Complete file service and file controller demo. Add AvatarPath attribute to Customer Model

--- a/EBook.csproj
+++ b/EBook.csproj
@@ -208,7 +208,7 @@
     <Compile Include="Controllers\CouponSearchController.cs" />
     <Compile Include="Controllers\CustomerAddressesController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
-    <Compile Include="Controllers\Customers1Controller.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\MerchandisesController.cs" />
     <Compile Include="Controllers\OwnsController.cs" />
     <Compile Include="Controllers\SellersController.cs" />
@@ -238,7 +238,9 @@
     <Compile Include="Service\BookSearch.cs" />
     <Compile Include="Service\CouponSearch.cs" />
     <Compile Include="Service\EmailSend.cs" />
+    <Compile Include="Service\FileUploadAuthorize.cs" />
     <Compile Include="Service\Session.cs" />
+    <Compile Include="Service\ShoppingCart.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
