--- a/EBook.csproj
+++ b/EBook.csproj
@@ -80,6 +80,10 @@
       <HintPath>packages\Oracle.ManagedDataAccess.EntityFramework.19.3.0\lib\net45\Oracle.ManagedDataAccess.EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="qcloudsms_csharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>packages\qcloud.qcloudsms_csharp.0.1.5\lib\net471\qcloudsms_csharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Remote.Linq, Version=5.0.0.0, Culture=neutral, PublicKeyToken=82d6c51b67e8b655">
       <HintPath>packages\Remote.Linq.5.8.2\lib\net451\Remote.Linq.dll</HintPath>
       <Private>True</Private>
@@ -144,6 +148,7 @@
       <HintPath>packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Web.Cors, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <HintPath>packages\Microsoft.AspNet.Cors.5.2.7\lib\net45\System.Web.Cors.dll</HintPath>
       <Private>True</Private>
@@ -271,6 +276,7 @@
     <Compile Include="Service\SellerSession.cs" />
     <Compile Include="Service\CustomerSession.cs" />
     <Compile Include="Service\ShoppingCart.cs" />
+    <Compile Include="Service\SmsSend.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
