--- a/packages.config
+++ b/packages.config
@@ -26,6 +26,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess" version="19.3.0" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.3.0" targetFramework="net472" />
+  <package id="qcloud.qcloudsms_csharp" version="0.1.5" targetFramework="net472" />
   <package id="Remote.Linq" version="5.8.2" targetFramework="net472" />
   <package id="Remote.Linq.EntityFramework" version="5.8.2" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
