--- a/packages.config
+++ b/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="NETCore.Encrypt" version="2.0.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess" version="19.3.0" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.3.0" targetFramework="net472" />
