--- a/Web.config
+++ b/Web.config
@@ -136,13 +136,13 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="ebook" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE))) " />
+        <dataSource alias="ebook" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=www.sparkxyf.cn)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=XE))) " />
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
   
   
   <connectionStrings>
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=ebook;Password=ebook;Data Source=localhost:1521/xe" />
+    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=ebook;Password=ebook;Data Source=www.sparkxyf.cn:1521/xe" />
   </connectionStrings>
 </configuration>
