--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="aliyun-net-sdk-core" version="1.5.1" targetFramework="net471" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="aqua-core" version="4.5.1" targetFramework="net472" />
   <package id="BCrypt.Net" version="0.1.0" targetFramework="net472" />
@@ -19,17 +20,24 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net471" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net471" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net471" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net471" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net471" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="NETCore.Encrypt" version="2.0.7" targetFramework="net472" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess" version="19.3.0" targetFramework="net472" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.3.0" targetFramework="net472" />
   <package id="qcloud.qcloudsms_csharp" version="0.1.5" targetFramework="net472" />
   <package id="Remote.Linq" version="5.8.2" targetFramework="net472" />
   <package id="Remote.Linq.EntityFramework" version="5.8.2" targetFramework="net472" />
+  <package id="runtime.native.System.Net.Http" version="4.3.1" targetFramework="net471" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
   <package id="System.Data.OracleClient" version="1.0.8" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
