--- a/EBook.csproj
+++ b/EBook.csproj
@@ -265,8 +265,18 @@
     <Compile Include="Controllers\LogisticController.cs" />
     <Compile Include="Controllers\ManageAnswersController.cs" />
     <Compile Include="Controllers\ManageBooksController.cs" />
+    <Compile Include="Controllers\ManageCollectsController.cs" />
+    <Compile Include="Controllers\ManageCouponsController.cs" />
+    <Compile Include="Controllers\ManageCustomerAddressesController.cs" />
     <Compile Include="Controllers\ManageCustomersController.cs" />
+    <Compile Include="Controllers\ManageMerchandisesController.cs" />
+    <Compile Include="Controllers\ManageOwnsController.cs" />
+    <Compile Include="Controllers\ManageQuestionsController.cs" />
+    <Compile Include="Controllers\ManageSellerAddressesController.cs" />
     <Compile Include="Controllers\ManageSellersController.cs" />
+    <Compile Include="Controllers\ManageShoppingCartsController.cs" />
+    <Compile Include="Controllers\ManageTransactsController.cs" />
+    <Compile Include="Controllers\ManageVipMembersController.cs" />
     <Compile Include="Controllers\MerchandisesController.cs" />
     <Compile Include="Controllers\NewController.cs" />
     <Compile Include="Controllers\OwnsController.cs" />
